# src/main/kotlin/br/com/buscamed/api/v1/prescription/PrescriptionController.kt
@@ -2,12 +2,16 @@ package br.com.buscamed.api.v1.prescription
 
 import br.com.buscamed.api.v1.dto.request.TextRequestDTO
 import br.com.buscamed.api.v1.extensions.extractImageMultipart
+import br.com.buscamed.data.mapper.toDTO
+import br.com.buscamed.domain.usecase.GetMedicalPrescriptionHistoryUseCase
 import br.com.buscamed.domain.usecase.ProcessMedicalPrescriptionImageUseCase
 import br.com.buscamed.domain.usecase.ProcessMedicalPrescriptionTextUseCase
 import io.ktor.http.HttpStatusCode
 import io.ktor.server.application.ApplicationCall
 import io.ktor.server.request.receive
 import io.ktor.server.response.respond
+import java.time.Instant
+import java.time.format.DateTimeParseException
 
 /**
  * Controlador responsável por orquestrar as requisições relacionadas a prescrições médicas.
@@ -17,7 +21,8 @@ import io.ktor.server.response.respond
  */
 class PrescriptionController(
     private val processImageUseCase: ProcessMedicalPrescriptionImageUseCase,
-    private val processTextUseCase: ProcessMedicalPrescriptionTextUseCase
+    private val processTextUseCase: ProcessMedicalPrescriptionTextUseCase,
+    private val getHistoryUseCase: GetMedicalPrescriptionHistoryUseCase
 ) {
 
     /**
@@ -44,5 +49,25 @@ class PrescriptionController(
         val result = processTextUseCase(request.text)
         
         call.respond(HttpStatusCode.OK, result)
+    }
+
+    /**
+     * Processa a requisição para obter o histórico de processamentos de prescrição médica.
+     * Recupera o parâmetro 'startDate' da query string e realiza a busca filtrada.
+     *
+     * @param call O contexto da requisição Ktor.
+     */
+    suspend fun getHistory(call: ApplicationCall) {
+        val startDateParam = call.request.queryParameters["startDate"]
+
+        val startDate = try {
+            startDateParam?.let { Instant.parse(it) } ?: Instant.EPOCH
+        } catch (e: DateTimeParseException) {
+            call.respond(HttpStatusCode.BadRequest, "O formato da data 'startDate' é inválido. Utilize o padrão ISO-8601.")
+            return
+        }
+
+        val historyList = getHistoryUseCase(startDate).map { it.toDTO() }
+        call.respond(HttpStatusCode.OK, historyList)
     }
 }
