# src/main/kotlin/br/com/buscamed/api/v1/prescription/PrescriptionRoutes.kt
@@ -7,4 +7,5 @@ object PrescriptionRoutes {
     const val V1_ROOT = "/v1/prescription"
     const val PROCESS_IMAGE = "/process/image"
     const val PROCESS_TEXT = "/process/text"
+    const val HISTORY = "/history"
 }
